--- a/css/app.css
+++ b/css/app.css
@@ -683,3 +683,21 @@ img.user-avatar {
     margin: 0;
     margin-left: 10px;
 }
+
+/* Form's button */
+.k-button.btn-fab i {
+    margin-right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.active-bar,
+.tool-bar {
+    display: flex;
+    gap: 6px;
+}
+
+.btn-fab{
+    margin: inherit;
+}
