--- a/components/templates/cron-breadcrumbs.designtime.html
+++ b/components/templates/cron-breadcrumbs.designtime.html
@@ -1,11 +1,11 @@
-<ol class="k-breadcrumb-container"  id="cron-breadcrumbs">
-    <li class="k-breadcrumb-item  k-breadcrumb-root-item ">
-        <a class=" k-breadcrumb-root-link  k-breadcrumb-icontext-link" title="Home">
-            <span class="k-icon k-i-home "></span>Home
-        </a>
-        <span class="k-breadcrumb-delimiter-icon k-icon k-i-arrow-chevron-right" aria-hidden="true"></span>
-    </li>
-    <li class="k-breadcrumb-item  k-breadcrumb-last-item">
-        <a class="k-breadcrumb-link k-state-disabled" title="teste">Teste</a>
-    </li>
-</ol>
+<div id="cron-breadcrumbs" >
+    <ol class="k-breadcrumb-container">
+        <li class="k-breadcrumb-item  k-breadcrumb-root-item ">
+            <a class=" k-breadcrumb-root-link  k-breadcrumb-icontext-link" title="Home">Home</a>
+            <span class="k-breadcrumb-delimiter-icon k-icon k-i-arrow-chevron-right" aria-hidden="true"></span>
+        </li>
+        <li class="k-breadcrumb-item  k-breadcrumb-last-item">
+            <a class="k-breadcrumb-link k-state-disabled" title="teste">Teste</a>
+        </li>
+    </ol>
+</div>
