--- a/components/templates/cron-breadcrumbs.template.html
+++ b/components/templates/cron-breadcrumbs.template.html
@@ -1,3 +1,3 @@
-<cron-breadcrumbs id="cron-breadcrumbs" id-menu="crn-dynamic-menu-home" crn-delimiter-icon="arrow-chevron-right">
+<cron-breadcrumbs id="cron-breadcrumbs" id-menu="crn-dynamic-menu-home" crn-delimiter-icon="arrow-chevron-right" class="idMenu" type-menu="idMenu">
     <nav id="navbreadcrumb"></nav>
 </cron-breadcrumbs>
