--- a/components/templates/crn-ordered-list.template.html
+++ b/components/templates/crn-ordered-list.template.html
@@ -1,5 +1,5 @@
-<ol class="list" type="1">
-  <li data-component="crn-list-item" data-replace="true">Item</li>
-  <li data-component="crn-list-item" data-replace="true">Item</li>
-  <li data-component="crn-list-item" data-replace="true">Item</li>
-</ol>
+<crn-list-ordered list-type="ordered-list" attribute-value="number">
+  <li data-component="crn-list-item" data-replace="true">Item 1</li>
+  <li data-component="crn-list-item" data-replace="true">Item 2</li>
+  <li data-component="crn-list-item" data-replace="true">Item 3</li>
+</crn-list-ordered>
