--- a/css/themes/custom/material/custom-material.css
+++ b/css/themes/custom/material/custom-material.css
@@ -297,7 +297,7 @@ h6 {
 }
 
 .fill .bg.ng-scope .container-full .container-fluid > .component-holder .login-view {
-    flex-direction: column-reverse;
+    flex-direction: column;
     background: var(--colorNeutral00);
     border-radius: var(--borderRadiusNone);
     padding: var(--distanceSmall);
